force-app/main/default/objects/Apttus_Config2__GLAccountMapRule__c/Apttus_Config2__GLAccountMapRule__c.object-meta.xml
<CustomObject>
    <description>Represents a G/L account map rule to determine G/L account numbers for a product or service</description>
    <label>G/L Account Map Rule</label>
    <nameField>
        <label>Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>G/L Account Map Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>