force-app/main/default/objects/Apttus_Config2__GLAccountMapRule__c/fields/Apttus_Config2__BaseGLAccountNumber__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__BaseGLAccountNumber__c</fullName>
    <description>The base G/L account number</description>
    <inlineHelpText>The base G/L account number</inlineHelpText>
    <label>Base G/L Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>