force-app/main/default/objects/Apttus_Config2__GLAccountMapRule__c/fields/Apttus_Config2__Dimension1Id__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Dimension1Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the first dimension.</description>
    <inlineHelpText>ID of the first dimension.</inlineHelpText>
    <label>Dimension 1</label>
    <referenceTo>Apttus_Config2__PriceDimension__c</referenceTo>
    <relationshipName>GLAccountMappingRulesDim1</relationshipName>
    <type>Lookup</type>
</CustomField>