force-app/main/default/objects/Apttus_Config2__GLAccountMapRule__c/fields/Apttus_Config2__Dimension2Id__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Dimension2Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the second dimension</description>
    <inlineHelpText>ID of the second dimension</inlineHelpText>
    <label>Dimension 2</label>
    <referenceTo>Apttus_Config2__PriceDimension__c</referenceTo>
    <relationshipName>GLAccountMappingRulesDim2</relationshipName>
    <type>Lookup</type>
</CustomField>