force-app/main/default/objects/Apttus_Config2__GLAccountMapRule__c/fields/Apttus_Config2__Dimension3Id__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Dimension3Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the third dimension</description>
    <inlineHelpText>ID of the third dimension</inlineHelpText>
    <label>Dimension 3</label>
    <referenceTo>Apttus_Config2__PriceDimension__c</referenceTo>
    <relationshipName>GLAccountMappingRulesDim3</relationshipName>
    <type>Lookup</type>
</CustomField>