force-app/main/default/objects/Apttus_Config2__GLAccountMapRule__c/fields/Apttus_Config2__GLAccountType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__GLAccountType__c</fullName>
    <description>The G/L account type</description>
    <inlineHelpText>The G/L account type</inlineHelpText>
    <label>G/L Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accounts Receivable Account</fullName>
            </value>
            <value>
                <fullName>Deferred Revenue Account</fullName>
            </value>
            <value>
                <fullName>Recognized Revenue Account</fullName>
            </value>
            <value>
                <fullName>Unbilled A/R Account</fullName>
            </value>
            <value>
                <fullName>Unbilled Deferred Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>