force-app/main/default/objects/Apttus_Config2__GLAccountMapRule__c/fields/Apttus_Config2__NumberOfEntries__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__NumberOfEntries__c</fullName>
    <description>Indicates the number of entries associated with the mapping rule</description>
    <inlineHelpText>Indicates the number of entries associated with the mapping rule</inlineHelpText>
    <label>Number Of Entries</label>
    <summaryForeignKey>Apttus_Config2__GLAccountMapEntry__c.Apttus_Config2__MapRuleId__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>